--- a/apps/docs/src/app/core/component-docs/input/examples/input-inline-help-example.component.html
+++ b/apps/docs/src/app/core/component-docs/input/examples/input-inline-help-example.component.html
@@ -3,7 +3,7 @@
         <label fd-form-label for="input-41">
             Input with inline help
                 <fd-inline-help [placement]="'right'">
-                 Lorem ipsum dolor sit amet, consectetur adipiscing.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing.
                 </fd-inline-help>
         </label>
         <input fd-form-control placeholder="Field placeholder text" type="text" id="input-41">
@@ -15,7 +15,7 @@
             Input with help message
         </label>
         <input fd-form-control placeholder="Field placeholder text" type="text" id="input-42">
-        <fd-form-message type="help">
+        <fd-form-message>
             Pellentesque metus lacus commodo eget justo ut rutrum varius nunc
         </fd-form-message>
     </div>
