--- a/apps/docs/src/app/core/component-docs/localization-editor/examples/localization-editor-forms-example.component.html
+++ b/apps/docs/src/app/core/component-docs/localization-editor/examples/localization-editor-forms-example.component.html
@@ -1,14 +1,19 @@
 <form [formGroup]="customForm">
-    <fd-localization-editor>
-        <fd-localization-editor-main [label]="'EN'" [compact]="true">
-            <input fd-form-control fd-localization-editor-input formControlName="en" type="text" placeholder="EN">
-        </fd-localization-editor-main>
-        <li fd-localization-editor-element *ngFor="let key of customFormKeys">
-            <fd-localization-editor-item [label]="key | uppercase" [compact]="true">
-                <input fd-form-control fd-localization-editor-input formControlName="{{key}}" type="text"  placeholder="{{key | uppercase}}">
-            </fd-localization-editor-item>
-        </li>
-    </fd-localization-editor>
+    <div class="fd-form-item">
+        <label fd-form-label>Localization Editor</label>
+        <fd-localization-editor>
+            <fd-localization-editor-main [state]="'information'" [label]="'EN'" [compact]="true">
+                <input fd-form-control fd-localization-editor-input formControlName="en" type="text" placeholder="EN">
+            </fd-localization-editor-main>
+            <li fd-localization-editor-element *ngFor="let key of customFormKeys">
+                <fd-localization-editor-item [label]="key | uppercase" [compact]="true">
+                    <input fd-form-control fd-localization-editor-input formControlName="{{key}}" type="text"  placeholder="{{key | uppercase}}">
+                </fd-localization-editor-item>
+            </li>
+        </fd-localization-editor>
+        <fd-form-message [type]="'information'">More information</fd-form-message>
+        <br/>
+    </div>
 </form>
 <ng-container *ngFor="let key of customFormKeys">
     <br/>{{key | uppercase}}: {{customForm.get(key).value}}
