--- a/apps/docs/src/app/core/component-docs/select-native/examples/select-native-example.component.html
+++ b/apps/docs/src/app/core/component-docs/select-native/examples/select-native-example.component.html
@@ -7,4 +7,12 @@
             <option value="3">Sed bibendum sapien at posuere interdum</option>
         </select>
     </div>
+    <div fd-form-item>
+        <label fd-form-label for="compact-select">Compact select:</label>
+        <select fd-form-control id="compact-select" name="" [compact]="true">
+            <option value="1">Duis malesuada odio volutpat elementum</option>
+            <option value="2">Suspendisse ante ligula</option>
+            <option value="3">Sed bibendum sapien at posuere interdum</option>
+        </select>
+    </div>
 </div>
