--- a/apps/docs/src/app/core/component-docs/checkbox/examples/checkbox-form-group-example.component.html
+++ b/apps/docs/src/app/core/component-docs/checkbox/examples/checkbox-form-group-example.component.html
@@ -2,23 +2,23 @@
 <form [formGroup]="customForm">
     <div fd-form-set>
         <div fd-form-item [isCheck]="true">
-            <label fd-form-label for="checkbox-13">
-                <input fd-form-control formControlName="firstOption" type="checkbox" id="checkbox-13"
-                       name="checkbox-name-6">
+            <label fd-form-label for="checkbox-17" [checkbox]="true">
+                <input fd-form-control formControlName="firstOption" type="checkbox" id="checkbox-17"
+                       name="checkbox-name-7">
                 Option 1
             </label>
         </div>
         <div fd-form-item [isCheck]="true">
-            <label fd-form-label for="checkbox-14">
-                <input fd-form-control formControlName="secondOption" type="checkbox" id="checkbox-14"
-                       name="checkbox-name-6">
+            <label fd-form-label for="checkbox-18" [checkbox]="true">
+                <input fd-form-control formControlName="secondOption" type="checkbox" id="checkbox-18"
+                       name="checkbox-name-7">
                 Option 2
             </label>
         </div>
         <div fd-form-item [isCheck]="true">
-            <label fd-form-label for="checkbox-15">
-                <input fd-form-control formControlName="thirdOption" type="checkbox" id="checkbox-15"
-                       name="checkbox-name-6">
+            <label fd-form-label for="checkbox-19" [checkbox]="true">
+                <input fd-form-control formControlName="thirdOption" type="checkbox" id="checkbox-19"
+                       name="checkbox-name-7">
                 Option 3
             </label>
         </div>
