--- a/apps/docs/src/app/core/component-docs/input/examples/input-example.component.html
+++ b/apps/docs/src/app/core/component-docs/input/examples/input-example.component.html
@@ -1,18 +1,24 @@
 <div fd-form-set>
     <div fd-form-item>
-        <label fd-form-label for="input-1">Default Input:</label>
+        <label fd-form-label for="input-1">Default Input</label>
         <input fd-form-control type="text" id="input-1" placeholder="Field placeholder text">
     </div>
 </div>
 <div fd-form-set>
     <div fd-form-item>
-        <label fd-form-label for="input-2">Required Input:*</label>
+        <label fd-form-label [required]="true" for="input-2">Required Input</label>
         <input fd-form-control type="text" id="input-2" placeholder="Field placeholder text" aria-required="true">
     </div>
 </div>
 <div fd-form-set>
     <div fd-form-item>
-        <label fd-form-label for="input-3">Password:*</label>
+        <label fd-form-label for="input-3">Password</label>
         <input fd-form-control type="password" id="input-3" placeholder="Field placeholder text" aria-required="true">
+    </div>
+</div>
+<div fd-form-set>
+    <div fd-form-item>
+        <label fd-form-label for="input-4">Compact</label>
+        <input fd-form-control [compact]="true" type="password" id="input-4" placeholder="Field placeholder text" aria-required="true">
     </div>
 </div>
