--- a/apps/docs/src/app/core/component-docs/input/examples/input-state-example.component.html
+++ b/apps/docs/src/app/core/component-docs/input/examples/input-state-example.component.html
@@ -10,6 +10,8 @@
         Valid Input
     </label>
     <input fd-form-control type="text" id="input-52" placeholder="Field placeholder text" [state]="'valid'">
+    <fd-form-message [type]="'success'">Pellentesque metus lacus commodo eget justo ut rutrum varius nunc</fd-form-message>
+    <br/>
 </div>
 <div fd-form-item>
     <label fd-form-label for="input-53">
@@ -17,6 +19,7 @@
     </label>
     <input fd-form-control type="text" id="input-53" placeholder="Field placeholder text" [state]="'invalid'">
     <fd-form-message [type]="'error'">Pellentesque metus lacus commodo eget justo ut rutrum varius nunc</fd-form-message>
+    <br/>
 </div>
 <div fd-form-item>
     <label fd-form-label for="input-54">
@@ -24,6 +27,15 @@
     </label>
     <input fd-form-control type="text" id="input-54" placeholder="Field placeholder text" [state]="'warning'">
     <fd-form-message [type]="'warning'">Pellentesque metus lacus commodo eget justo ut rutrum varius nunc</fd-form-message>
+    <br/>
+</div>
+<div fd-form-item>
+    <label fd-form-label for="input-59">
+        Information Input
+    </label>
+    <input fd-form-control type="text" id="input-59" placeholder="Field placeholder text" [state]="'information'">
+    <fd-form-message [type]="'information'">Pellentesque metus lacus commodo eget justo ut rutrum varius nunc</fd-form-message>
+    <br/>
 </div>
 <div fd-form-item>
     <label fd-form-label for="input-55">
