--- a/apps/docs/src/app/core/component-docs/multi-input/examples/multi-input-form-example/multi-input-form-example.component.html
+++ b/apps/docs/src/app/core/component-docs/multi-input/examples/multi-input-form-example/multi-input-form-example.component.html
@@ -1,7 +1,9 @@
 <form [formGroup]="customForm">
     <div fd-form-set class="flex-form-set">
         <div fd-form-item>
+            <label fd-form-label>Valid Localization Editor</label>
             <fd-multi-input
+                [state]="'valid'"
                 formControlName="selectedValues"
                 [dropdownValues]="['Apple', 'Banana', 'Pineapple', 'Tomato']"
                 [placeholder]="'Search Here...'"
@@ -9,10 +11,12 @@
             </fd-multi-input>
         </div>
         <div fd-form-item>
+            <label fd-form-label>Disabled Localization Editor</label>
             <fd-multi-input
                 formControlName="disabledSelectedValues"
                 [dropdownValues]="['Apple', 'Banana', 'Pineapple', 'Tomato']"
                 [placeholder]="'Search Here...'"
+                [state]="'information'"
             >
             </fd-multi-input>
         </div>
