--- a/apps/docs/src/app/core/component-docs/radio/examples/radio-example.component.html
+++ b/apps/docs/src/app/core/component-docs/radio/examples/radio-example.component.html
@@ -2,20 +2,44 @@
     <legend fd-form-legend>Radio buttons</legend>
     <fd-form-group>
         <div fd-form-item [isCheck]="true">
-            <label fd-form-label for="radio-1">
+            <label fd-form-label for="radio-1" [radio]="true">
                 <input fd-form-control type="radio" id="radio-1" name="radio-name-1" value="" checked>
                 Option One
             </label>
         </div>
         <div fd-form-item [isCheck]="true">
-            <label fd-form-label for="radio-2">
+            <label fd-form-label for="radio-2" [radio]="true">
                 <input fd-form-control type="radio" id="radio-2" name="radio-name-1" value="">
                 Option Two
             </label>
         </div>
         <div fd-form-item [isCheck]="true">
-            <label fd-form-label for="radio-3">
+            <label fd-form-label for="radio-3" [radio]="true">
                 <input fd-form-control type="radio" id="radio-3" name="radio-name-1" value="">
+                Option Three
+            </label>
+        </div>
+    </fd-form-group>
+</fieldset>
+
+<fieldset fd-form-set>
+    <legend fd-form-legend>Compact Radio buttons</legend>
+    <fd-form-group>
+        <div fd-form-item [isCheck]="true">
+            <label fd-form-label for="radio-26" [radio]="true">
+                <input fd-form-control [compact]="true" type="radio" id="radio-26" name="compactRadio" value="" checked>
+                Option One
+            </label>
+        </div>
+        <div fd-form-item [isCheck]="true">
+            <label fd-form-label for="radio-27" [radio]="true">
+                <input fd-form-control [compact]="true" type="radio" id="radio-27" name="compactRadio" value="">
+                Option Two
+            </label>
+        </div>
+        <div fd-form-item [isCheck]="true">
+            <label fd-form-label for="radio-28" [radio]="true">
+                <input fd-form-control [compact]="true" type="radio" id="radio-28" name="compactRadio" value="">
                 Option Three
             </label>
         </div>
@@ -26,19 +50,19 @@
     <legend fd-form-legend>Radio buttons disabled</legend>
     <fd-form-group>
         <div fd-form-item [isCheck]="true">
-            <label fd-form-label for="radio-4">
+            <label fd-form-label for="radio-4" [radio]="true">
                 <input fd-form-control type="radio" id="radio-4" name="radio-name-2" value="" checked disabled>
                 Option One
             </label>
         </div>
         <div fd-form-item [isCheck]="true">
-            <label fd-form-label for="radio-5">
+            <label fd-form-label for="radio-5" [radio]="true">
                 <input fd-form-control type="radio" id="radio-5" name="radio-name-2" value="" disabled>
                 Option Two
             </label>
         </div>
         <div fd-form-item [isCheck]="true">
-            <label fd-form-label for="radio-6">
+            <label fd-form-label for="radio-6" [radio]="true">
                 <input fd-form-control type="radio" id="radio-6" name="radio-name-2" value="" disabled>
                 Option Three
             </label>
@@ -50,19 +74,19 @@
     <legend fd-form-legend>Inline Radio buttons</legend>
     <fd-form-group>
         <div fd-form-item [isInline]="true" [isCheck]="true">
-            <label fd-form-label for="radio-7">
+            <label fd-form-label for="radio-7" [radio]="true">
                 <input fd-form-control type="radio" id="radio-7" name="radio-name-3" value="" checked>
                 Option One
             </label>
         </div>
         <div fd-form-item [isInline]="true" [isCheck]="true">
-            <label fd-form-label for="radio-8">
+            <label fd-form-label for="radio-8" [radio]="true">
                 <input fd-form-control type="radio" id="radio-8" name="radio-name-3" value="">
                 Option Two
             </label>
         </div>
         <div fd-form-item [isInline]="true" [isCheck]="true">
-            <label fd-form-label for="radio-9">
+            <label fd-form-label for="radio-9" [radio]="true">
                 <input fd-form-control type="radio" id="radio-9" name="radio-name-3" value="">
                 Option Three
             </label>
@@ -74,21 +98,27 @@
     <legend fd-form-legend>Radio button States</legend>
     <fd-form-group>
         <div fd-form-item [isCheck]="true">
-            <label fd-form-label for="radio-10">
+            <label fd-form-label for="radio-10" [radio]="true">
                 <input fd-form-control type="radio" id="radio-10" name="radio-name-4" [state]="'valid'">
                 Valid Option
             </label>
         </div>
         <div fd-form-item [isCheck]="true">
-            <label fd-form-label for="radio-11">
+            <label fd-form-label for="radio-11" [radio]="true">
                 <input fd-form-control type="radio" id="radio-11" name="radio-name-4" [state]="'warning'">
                 Warning Option
             </label>
         </div>
         <div fd-form-item [isCheck]="true">
-            <label fd-form-label for="radio-12">
+            <label fd-form-label for="radio-12" [radio]="true">
                 <input fd-form-control type="radio" id="radio-12" name="radio-name-4" [state]="'invalid'">
                 Invalid Option
+            </label>
+        </div>
+        <div fd-form-item [isCheck]="true">
+            <label fd-form-label for="information-input" [radio]="true">
+                <input fd-form-control type="radio" id="information-input" name="radio-name-4" [state]="'information'">
+                Information Option
             </label>
         </div>
     </fd-form-group>
