--- a/apps/docs/src/app/core/component-docs/select-native/examples/select-native-inline-help-example.component.html
+++ b/apps/docs/src/app/core/component-docs/select-native/examples/select-native-inline-help-example.component.html
@@ -2,11 +2,9 @@
     <div fd-form-item>
         <label fd-form-label for="select-41">
             Select with inline help
-            <span class="fd-inline-help fd-has-float-right">
-                <span class="fd-inline-help__content fd-inline-help__content--bottom-right">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing.
-                </span>
-            </span>
+            <fd-inline-help>
+                Lorem ipsum dolor sit amet, consectetur adipiscing.
+            </fd-inline-help>
         </label>
         <select fd-form-control id="select-41" name="">
             <option value="1">Duis malesuada odio volutpat elementum</option>
@@ -25,8 +23,9 @@
             <option value="2">Suspendisse ante ligula</option>
             <option value="3">Sed bibendum sapien at posuere interdum</option>
         </select>
-        <fd-form-message type="help">
+        <fd-form-message [type]="'information'">
             Pellentesque metus lacus commodo eget justo ut rutrum varius nunc
         </fd-form-message>
+        <br/>
     </div>
 </div>
