--- a/apps/docs/src/app/core/component-docs/select-native/examples/select-native-state-example.component.html
+++ b/apps/docs/src/app/core/component-docs/select-native/examples/select-native-state-example.component.html
@@ -8,6 +8,7 @@
         <option value="3">Sed bibendum sapien at posuere interdum</option>
     </select>
     <fd-form-message>Pellentesque metus lacus commodo eget justo ut rutrum varius nunc</fd-form-message>
+    <br/>
 </div>
 <div fd-form-item>
     <label fd-form-label for="select-52">
@@ -30,6 +31,7 @@
     </select>
     <fd-form-message [type]="'error'">Pellentesque metus lacus commodo eget justo ut rutrum varius nunc
     </fd-form-message>
+    <br/>
 </div>
 <div fd-form-item>
     <label fd-form-label for="select-54">
@@ -42,6 +44,20 @@
     </select>
     <fd-form-message [type]="'warning'">Pellentesque metus lacus commodo eget justo ut rutrum varius nunc
     </fd-form-message>
+    <br/>
+</div>
+<div fd-form-item>
+    <label fd-form-label for="information-select">
+        Information select
+    </label>
+    <select fd-form-control id="information-select" name="" [state]="'information'">
+        <option value="1">Duis malesuada odio volutpat elementum</option>
+        <option value="2">Suspendisse ante ligula</option>
+        <option value="3">Sed bibendum sapien at posuere interdum</option>
+    </select>
+    <fd-form-message [type]="'information'">Pellentesque metus lacus commodo eget justo ut rutrum varius nunc
+    </fd-form-message>
+    <br/>
 </div>
 <div fd-form-item>
     <label fd-form-label for="select-55">
