--- a/apps/docs/src/app/core/component-docs/textarea/examples/textarea-inline-help-example.component.html
+++ b/apps/docs/src/app/core/component-docs/textarea/examples/textarea-inline-help-example.component.html
@@ -2,11 +2,9 @@
     <div fd-form-item>
         <label fd-form-label for="textarea-41">
             Textarea with inline help
-            <span class="fd-inline-help fd-has-float-right">
-                <span class="fd-inline-help__content fd-inline-help__content--bottom-right">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing.
-                </span>
-            </span>
+            <fd-inline-help>
+                Pellentesque metus lacus commodo eget justo ut rutrum varius nunc
+            </fd-inline-help>
         </label>
         <textarea fd-form-control placeholder="Field placeholder text" id="textarea-41"></textarea>
     </div>
@@ -17,7 +15,7 @@
             Textarea with help message
         </label>
         <textarea fd-form-control placeholder="Field placeholder text" type="text" id="textarea-42"></textarea>
-        <fd-form-message type="help">
+        <fd-form-message>
             Pellentesque metus lacus commodo eget justo ut rutrum varius nunc
         </fd-form-message>
     </div>
