--- a/libs/core/src/lib/multi-input/multi-input.component.html
+++ b/libs/core/src/lib/multi-input/multi-input.component.html
@@ -11,15 +11,17 @@
                  [attr.aria-label]="multiInputBodyLabel"
                  [attr.aria-expanded]="open">
                 <fd-input-group
+                    [state]="state"
                     [buttonFocusable]="false"
                     [disabled]="disabled"
                     [compact]="compact"
                     [button]="true"
                     [glyph]="glyph"
-                    (addOnButtonClicked)="openChangeHandle(!open)">
+                    (addOnButtonClicked)="isOpen = !isOpen">
                     <input type="text" class="fd-input" fd-input-group-input
                            #searchInputElement
-                           [ngClass]="{'fd-input--compact': compact}"
+                           [compact]="compact"
+                           [state]="state"
                            [placeholder]="placeholder"
                            [disabled]="disabled"
                            [(ngModel)]="searchTerm"
@@ -36,7 +38,7 @@
                 <ul fd-menu-list>
                     <li *ngFor="let value of displayedValues; let ind  = index">
                         <label fd-menu-item (keydown)="handleKeyDown($event, ind)">
-                            <input type="checkbox" class="fd-checkbox"
+                            <input type="checkbox" fd-form-control
                                    [ngModel]="selected ? selected.indexOf(value) !== -1 : false"
                                    (ngModelChange)="handleSelect($event, value)">
                             <span [innerHtml]="value | displayFnPipe:displayFn | highlight:searchTerm:highlight"></span>
