docs:(platform:menu): Added an example to open/close menu popover on item click

--- a/apps/docs/src/app/platform/component-docs/platform-menu/platform-menu-docs.component.html
+++ b/apps/docs/src/app/platform/component-docs/platform-menu/platform-menu-docs.component.html
@@ -47,6 +47,19 @@
 
 <separator></separator>
 
+<fd-docs-section-title [id]="'clickCloseMenu'" [componentName]="'menu'">
+    Menu example to demonstrate closing of popover on click of menu item
+</fd-docs-section-title>
+<description
+    >This example shows how to close a popover or any invoking component when a Menu item is clicked.
+</description>
+<component-example [name]="'ex6'">
+    <fdp-platform-menu-click-close-example></fdp-platform-menu-click-close-example>
+</component-example>
+<code-example [exampleFiles]="menuClickClose"></code-example>
+
+<separator></separator>
+
 <fd-docs-section-title [id]="'complexMenu'" [componentName]="'menu'">
     Complex menu with all options used
 </fd-docs-section-title>
