Add semantic toggle, beautify forms examples

--- a/apps/docs/src/app/core/component-docs/input-group/examples/input-group-complex-example.component.html
+++ b/apps/docs/src/app/core/component-docs/input-group/examples/input-group-complex-example.component.html
@@ -26,7 +26,7 @@
 <br/>
 <fd-form-group>
     <div fd-form-item>
-        <label fd-form-label>Multiple Input Group Addons</label>
+        <label fd-form-label>Multiple Input Group Addons with input in the middle</label>
         <fd-input-group>
             <span fd-input-group-addon>
                 Beginning Addon
@@ -41,7 +41,7 @@
 <br/>
 <fd-form-group>
     <div fd-form-item>
-        <label fd-form-label>Multiple Input Group Addons</label>
+        <label fd-form-label>Multiple Input Group Addons with input on left side</label>
         <fd-input-group>
             <input fd-input-group-input fd-form-control>
             <span fd-input-group-addon>
@@ -57,7 +57,7 @@
 <br/>
 <fd-form-group>
     <div fd-form-item>
-        <label fd-form-label>Multiple Button Addons</label>
+        <label fd-form-label>Multiple Input Group Button Addons with input on left side</label>
         <fd-input-group>
             <input fd-input-group-input fd-form-control>
             <span fd-input-group-addon [button]="true">
@@ -79,7 +79,7 @@
 <br/>
 <fd-form-group>
     <div fd-form-item>
-        <label fd-form-label>Multiple Button Addons</label>
+        <label fd-form-label>Multiple Input Group Button Addons with input in the middle</label>
         <fd-input-group>
             <span fd-input-group-addon [button]="true">
                 <button fd-button
@@ -101,17 +101,11 @@
 <br/>
 <fd-form-group>
     <div fd-form-item>
-        <label fd-form-label>Multiple Button Addons</label>
+        <label fd-form-label>Multiple Input Group Button Addons with input on right side</label>
         <fd-input-group>
             <span fd-input-group-addon [button]="true">
                 <button fd-button
                         [glyph]="'decline'"
-                        [options]="'light'">
-                </button>
-            </span>
-            <span fd-input-group-addon [button]="true">
-                <button fd-button
-                        [glyph]="'menu'"
                         [options]="'light'">
                 </button>
             </span>
