--- a/apps/docs/src/app/core/component-docs/input-group/input-group-docs.component.html
+++ b/apps/docs/src/app/core/component-docs/input-group/input-group-docs.component.html
@@ -92,7 +92,8 @@
     Input Group with complex templates.
 </fd-docs-section-title>
 <description>It is possible to use complex templates inside <code>Input Group</code> component. To achieve it you should
-    use <code>fd-input-group-input</code> for complex input template, or <code>fd-input-group-addon</code> for complex addon template
+    use <code>fd-input-group-input</code> for complex input template, or <code>fd-input-group-addon</code> for complex addon template.
+    There can be used more than one addon on one side.
 </description>
 <component-example [name]="'ex8'">
     <fd-input-group-complex-example></fd-input-group-complex-example>
