--- a/apps/docs/src/app/core/component-docs/select-native/examples/select-native-inline-help-example.component.html
+++ b/apps/docs/src/app/core/component-docs/select-native/examples/select-native-inline-help-example.component.html
@@ -1,6 +1,6 @@
 <div fd-form-set>
     <div fd-form-item>
-        <label fd-form-label for="select-41">
+        <label fd-form-label [inlineHelp]="true" for="select-41">
             Select with inline help
             <fd-inline-help>
                 Lorem ipsum dolor sit amet, consectetur adipiscing.
@@ -11,21 +11,5 @@
             <option value="2">Suspendisse ante ligula</option>
             <option value="3">Sed bibendum sapien at posuere interdum</option>
         </select>
-    </div>
-</div>
-<div fd-form-set>
-    <div fd-form-item>
-        <label fd-form-label for="select-42">
-            Select with help message
-        </label>
-        <select fd-form-control id="select-42" name="">
-            <option value="1">Duis malesuada odio volutpat elementum</option>
-            <option value="2">Suspendisse ante ligula</option>
-            <option value="3">Sed bibendum sapien at posuere interdum</option>
-        </select>
-        <fd-form-message [type]="'information'">
-            Pellentesque metus lacus commodo eget justo ut rutrum varius nunc
-        </fd-form-message>
-        <br/>
     </div>
 </div>
