--- a/apps/docs/src/app/core/component-docs/input/examples/input-form-group-example.component.html
+++ b/apps/docs/src/app/core/component-docs/input/examples/input-form-group-example.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="customForm">
-    <div fd-form-set class="flex-form-set">
+    <div class="flex-form-set">
         <div fd-form-item>
             <label fd-form-label for="form-input-1">Default Input:</label>
             <input
