--- a/apps/docs/src/app/core/component-docs/select-native/examples/select-native-example.component.html
+++ b/apps/docs/src/app/core/component-docs/select-native/examples/select-native-example.component.html
@@ -1,4 +1,4 @@
-<div fd-form-set>
+<fieldset fd-fieldset>
     <div fd-form-item>
         <label fd-form-label for="select-1">Default select:</label>
         <select fd-form-control id="select-1" name="">
@@ -15,4 +15,4 @@
             <option value="3">Sed bibendum sapien at posuere interdum</option>
         </select>
     </div>
-</div>
+</fieldset>
