--- a/apps/docs/src/app/schema/containers/schema-group/schema-group.component.html
+++ b/apps/docs/src/app/schema/containers/schema-group/schema-group.component.html
@@ -40,7 +40,7 @@
           </ng-template>
         </ng-container>
         <ng-container *ngSwitchCase="'boolean'">
-          <div fd-form-item [isCheck]="true">
+          <div fd-form-item>
               <label fd-form-label [for]="'playground' + control.key" [checkbox]="true">
                   {{ control.key }}
                   <input fd-form-control type="checkbox" [formControl]="control.control" [id]="'playground' + control.key">
@@ -48,7 +48,7 @@
           </div>
         </ng-container>
         <ng-container *ngSwitchCase="'enum'">
-          <div fd-form-item [isCheck]="true">
+          <div fd-form-item>
               <label fd-form-label [checkbox]="true" [for]="'playground' + control.key">
                   {{ control.key }}
                   <input fd-form-control type="checkbox" [formControl]="control.control" [id]="'playground' + control.key">
