--- a/libs/core/src/lib/form/form-item/form-item.component.scss
+++ b/libs/core/src/lib/form/form-item/form-item.component.scss
@@ -4,3 +4,5 @@
 @import "~fundamental-styles/dist/radio";
 @import "~fundamental-styles/dist/textarea";
 @import "~fundamental-styles/dist/form-select";
+@import "~fundamental-styles/dist/fieldset";
+
