--- a/apps/docs/src/app/core/component-docs/input-group/examples/input-group-form-example.component.html
+++ b/apps/docs/src/app/core/component-docs/input-group/examples/input-group-form-example.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="customForm">
-    <div fd-form-set class="flex-form-set">
+    <fieldset fd-fieldset class="flex-form-set">
         <div fd-form-item>
             <label fd-form-label>Search Input</label>
             <fd-input-group-search [placeholder]="'Search'" formControlName="searchQuery"></fd-input-group-search>
@@ -10,6 +10,6 @@
             <fd-input-group-number  formControlName="number"></fd-input-group-number>
             Number Entered: {{ customForm.controls?.number?.value }}
         </div>
-    </div>
+    </fieldset>
 </form>
 
