--- a/apps/docs/src/app/core/component-docs/multi-input/examples/multi-input-form-example/multi-input-form-example.component.html
+++ b/apps/docs/src/app/core/component-docs/multi-input/examples/multi-input-form-example/multi-input-form-example.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="customForm">
-    <div fd-form-set class="flex-form-set">
+    <fieldset fd-fieldset class="flex-form-set">
         <div fd-form-item>
             <label fd-form-label>Valid Localization Editor</label>
             <fd-multi-input
@@ -20,7 +20,7 @@
             >
             </fd-multi-input>
         </div>
-    </div>
+    </fieldset>
 </form>
 
 Selected Values:
