Add Additional class to popover component

--- a/libs/core/src/lib/popover/popover.component.html
+++ b/libs/core/src/lib/popover/popover.component.html
@@ -5,6 +5,7 @@
          aria-haspopup="true"
          (keydown)="handleKeydown($event)"
          [fdPopover]="popoverBody"
+         [additionalClasses]="additionalContainerClasses"
          [(isOpen)]="isOpen"
          (isOpenChange)="openChanged($event)"
          [noArrow]="noArrow"
