Add nested popover example

--- a/libs/core/src/lib/popover/popover.component.html
+++ b/libs/core/src/lib/popover/popover.component.html
@@ -5,7 +5,7 @@
          aria-haspopup="true"
          (keydown)="handleKeydown($event)"
          [fdPopover]="popoverBody"
-         [additionalClasses]="additionalContainerClasses"
+         [additionalClasses]="additionalClasses"
          [(isOpen)]="isOpen"
          (isOpenChange)="openChanged($event)"
          [noArrow]="noArrow"
