Solve rebase conflicts, fix tests

--- a/libs/core/src/lib/multi-input/multi-input.component.html
+++ b/libs/core/src/lib/multi-input/multi-input.component.html
@@ -17,7 +17,7 @@
                     [compact]="compact"
                     [button]="true"
                     [glyph]="glyph"
-                    (addOnButtonClicked)="isOpen = !isOpen">
+                    (addOnButtonClicked)="openChangeHandle(!open)">
                     <input type="text" class="fd-input" fd-input-group-input
                            #searchInputElement
                            [compact]="compact"
